--- a/src/styles/scss/helpers/_variables.scss
+++ b/src/styles/scss/helpers/_variables.scss
@@ -1,3 +1,12 @@
+/* --------------------------------------- */
+/*                  Credit                 */
+/* --------------------------------------- */
+// Some of the following varaibles are adopted from 
+// The United States Web Design System
+// at https://designsystem.digital.gov
+
+
+
 /* ------------- color pallet ------------ */
 
 // primary
@@ -62,11 +71,38 @@ $border-205:                      20px;
 $border-3:                        24px;
 
 // outlines
-
 $outline-0:                          0;
 $outline-1px:                      1px;
 $outline-2px:                      2px;
 $outline-05:                       4px; 
+
+// boder radius
+$radius-0:                           0;
+$radius-sm:                        2px;
+$radius-md:                        4px;
+$radius-lg:                        8px;
+$radius-pill:                     99rem;
+$radius-top-0:                       0;
+$radius-top-sm:                    2px;
+$radius-top-md:                    4px;
+$radius-top-lg:                    8px;
+$radius-top-pill:                 99rem;
+$radius-bottom-0:                    0;
+$radius-bottom-sm:                 2px;
+$radius-bottom-md:                 4px;
+$radius-bottom-lg:                 8px;
+$radius-bottom-pill:              99rem;
+$radius-left-0:                      0;
+$radius-left-sm:                   2px;
+$radius-left-md:                   4px;
+$radius-left-lg:                   8px;
+$radius-left-pill:                99rem;
+$radius-right-0:                     0;
+$radius-right-sm:                  2px;
+$radius-right-md:                  4px;
+$radius-right-lg:                  8px;
+$radius-right-pill:               99rem;
+
 
 /* ---------------- shadow --------------- */
 
