--- a/src/styles/scss/layouts/home/drafts/_draftNavBar.scss
+++ b/src/styles/scss/layouts/home/drafts/_draftNavBar.scss
@@ -1,7 +1,7 @@
 .draftNavBar {
   background-color: $color-primary;
   box-shadow: $shadow-1;
-  height: 60px;
+  // height: 60px;
   min-height: 60px;
   padding: $padding-05;
   margin-bottom: $margin-205;
