removing duplicated variables

--- a/src/styles/scss/helpers/_variables.scss
+++ b/src/styles/scss/helpers/_variables.scss
@@ -1,3 +1,12 @@
+/* --------------------------------------- */
+/*                  Credit                 */
+/* --------------------------------------- */
+// Some of the following varaibles are adopted from 
+// The United States Web Design System
+// at https://designsystem.digital.gov
+
+
+
 /* ------------- color pallet ------------ */
 
 // primary
@@ -97,6 +106,7 @@ $outline-0:                          0;
 $outline-1px:                      1px;
 $outline-2px:                      2px;
 $outline-05:                       4px; 
+
 
 /* ---------------- shadow --------------- */
 
