--- a/src/styles/scss/helpers/_variables.scss
+++ b/src/styles/scss/helpers/_variables.scss
@@ -128,3 +128,12 @@ $font-size-lg:                     22px;
 $font-size-xl:                     32px;
 $font-size-2xl:                    40px;
 $font-size-3xl:                    48px;
+$font-size-4xl:                    64px;
+$font-size-5xl:                    80px;
+
+
+/* ------------- font weight ------------- */
+$font-weight-thin:                  300;
+$font-weight-regular:               400;
+$font-weight-bold:                  700;
+$font-weight-super-bold:            800;
