--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,5 +4,8 @@
 @import "./scss/components/admin/dashboard";
 @import "./scss/components/admin/courseManagement";
 @import "./scss/components/admin/userManagement";
+@import "./scss/components/home/comment";
+@import "./scss/components//home/footer";
+
 @import "./scss/layouts/mainLayout";
 
