--- a/src/styles/scss/helpers/_variables.scss
+++ b/src/styles/scss/helpers/_variables.scss
@@ -10,8 +10,9 @@
 /* ------------- color pallet ------------ */
 
 // primary
-$color-primary:                  #fff;
-$color-primary-dark:             #ccc;
+$color-primary:                #ffffff;
+$color-primary-dark:           #f2f3f5;
+$color-primary-darker:         #cccccc;
 
 // secondary
 $color-secondary:              #ec5252;
