--- a/src/styles/scss/layouts/home/drafts/_draftHeroImage.scss
+++ b/src/styles/scss/layouts/home/drafts/_draftHeroImage.scss
@@ -33,14 +33,19 @@
   &__overlayTitle {
     @include abs-position(0, 0, 0, 0);
     height: inherit;
-    h1 {
+    h1,
+    h5 {
       color: $color-text-white;
       font-weight: $font-weight-regular;
-      font-size: $font-size-4xl;
       text-shadow: 2px 1px 2px rgba(0, 0, 0, 0.5);
+      line-height: 1.5;
     }
+    h1 {
+      font-size: $font-size-4xl;
+    }
+
     &__searchBar {
-      width: calc(40% + 200px);
+      width: calc(33% + 200px);
       padding: $padding-2 0;
     }
   }
@@ -49,6 +54,9 @@
       align-items: center;
       h1 {
         font-size: $font-size-2xl;
+      }
+      h5 {
+        display: none;
       }
       &__searchBar {
         width: 80%;
@@ -66,6 +74,9 @@
         text-align: center;
         font-size: $font-size-2xl;
       }
+      h5 {
+        display: none;
+      }
       &__searchBar {
         width: 100%;
       }
@@ -80,6 +91,9 @@
       h1 {
         text-align: center;
         font-size: $font-size-xl;
+      }
+      h5 {
+        display: none;
       }
       &__searchBar {
         width: 100%;
