--- a/src/styles/scss/layouts/home/drafts/_draftNavBar.scss
+++ b/src/styles/scss/layouts/home/drafts/_draftNavBar.scss
@@ -5,4 +5,43 @@
   min-height: 60px;
   padding: $padding-05;
   z-index: 10;
+
+  .draftNavBar__searchBar {
+    width: calc(20% + 200px);
+    input,
+    div > button {
+      background-color: $color-primary-dark;
+      border: $border-1px solid $color-primary-dark;
+      transition: none;
+    }
+    input {
+      &:focus,
+      &:focus + div > button {
+        background-color: $color-primary;
+
+      }
+      &:focus {
+        border-right: $border-0;
+      }
+      &:focus + div > button {
+        border-left: $border-0;
+      }
+    }
+  }
+  @include breakpoint(tablet) {
+    .draftNavBar__searchBar {
+      display: none;
+    }
+  }
+
+  @include breakpoint(phone) {
+    .draftNavBar__searchBar {
+      display: none;
+    }
+  }
+  @include breakpoint(xsphone) {
+    .draftNavBar__searchBar {
+      display: none;
+    }
+  }
 }
