--- a/src/styles/scss/helpers/_variables.scss
+++ b/src/styles/scss/helpers/_variables.scss
@@ -8,6 +8,14 @@
 
 
 /* ------------- color pallet ------------ */
+// gradient
+$background-base:          rgb(236,82,159);
+$background-gradient: 
+linear-gradient(                  115deg, 
+                 rgba(236,82,159,1) 0%, 
+                 rgba(236,82,82,1) 64%,
+                rgba(236,159,82,1) 100%
+              );
 
 // primary
 $color-primary:                #ffffff;
@@ -20,8 +28,9 @@ $color-secondary-light:        #ff857e;
 $color-secondary-dark:         #b31729;
 
 // text
-$color-text-black:               #000;
-$color-text-white:               #fff;
+$color-text-black:             #000000;
+$color-text-white:             #ffffff;
+$color-text-grey:              #686f7a;
 
 // NOTE: the following variables are adapted 
 // from United States Web Design System
