--- a/src/styles/scss/layouts/home/drafts/_draftNavBar.scss
+++ b/src/styles/scss/layouts/home/drafts/_draftNavBar.scss
@@ -8,23 +8,28 @@
 
   .draftNavBar__searchBar {
     width: calc(20% + 200px);
-    input,
-    div > button {
+
+    div > button:not(.customSearchBar__btn, .btn-secondary) {
+      background-color: $color-primary-dark !important;
+      border: $border-1px solid $color-primary-dark;
+    }
+    input {
       background-color: $color-primary-dark;
       border: $border-1px solid $color-primary-dark;
       transition: none;
-    }
-    input {
       &:focus,
       &:focus + div > button {
-        background-color: $color-primary;
-
+        background-color: $color-primary !important;
+        border: $border-1px solid $color-primary-dark;
       }
       &:focus {
         border-right: $border-0;
       }
       &:focus + div > button {
         border-left: $border-0;
+      }
+      &:focus + div > button:hover {
+        background-color: $color-secondary !important;
       }
     }
   }
