video-content page created

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -26,3 +26,6 @@
 @import "./scss/components/sortBtn";
 @import "./scss/components/itemCardStretch";
 @import "./scss/components/listPagination";
+@import "./scss/components/courseSyllabus";
+@import "./scss/components/lessonListGroup";
+@import "./scss/components/lessonNavigation";
