--- a/src/styles/scss/components/_listPagination.scss
+++ b/src/styles/scss/components/_listPagination.scss
@@ -57,3 +57,10 @@
     }
   }
 }
+@media only screen and (max-width: 720px) {
+  .listPagination {
+    &__item {
+      transform: scale(0.6);
+    }
+  }
+}
