--- a/src/styles/scss/layouts/admin/_admin.scss
+++ b/src/styles/scss/layouts/admin/_admin.scss
@@ -45,7 +45,7 @@
   @include admin-grid-layout(1fr, 1fr, 0);
 }
 
-.adminDashboard,
+.adminEnrollment,
 .adminProfile,
 .adminCourses,
 .adminUsers {
