added more functions to admin page & working on log-in/sign-up pages

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -15,6 +15,7 @@
 @import "./scss/layouts/home/drafts/draftNavBar";
 @import "./scss/layouts/home/drafts/draftHeroImage";
 @import "./scss/layouts/home/footer";
+@import "./scss/components/logInSignUp";
 
 /* ----------- Home components ----------- */
 @import "./scss/components/gradientHeader";
@@ -42,3 +43,4 @@
 @import "./scss/components/componentBeingBuilt";
 @import "./scss/components/tableCard";
 @import "./scss/components/adminCourseForm";
+@import "./scss//components/adminUserForm";
