--- a/src/styles/scss/components/_tableCard.scss
+++ b/src/styles/scss/components/_tableCard.scss
@@ -2,13 +2,17 @@
   &__wrapper {
     .wrapper__body {
       padding: $padding-0 $padding-4;
-      min-height: 312px;
+      height: 312px;
+      overflow: auto;
 
       .list__table {
         table-layout: fixed;
         width: 100%;
         min-width: 400px;
-
+        max-height: 300px;
+        &__btnDelte {
+          display: none;
+        }
         thead {
           th {
             // border-top: none;
@@ -21,6 +25,9 @@
         tbody {
           tr {
             cursor: pointer;
+          }
+          tr:hover .list__table__btnDelete {
+            display: block;
           }
         }
       }
