completed Login/Sign-up interfaces ; Working on creating behaviors of the site when logging in/ signing up

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -29,6 +29,7 @@
 @import "./scss/components/courseSyllabus";
 @import "./scss/components/lessonListGroup";
 @import "./scss/components/lessonNavigation";
+@import "./scss/components/profileNav";
 
 /* ---------------- Admin ---------------- */
 @import "./scss/layouts/admin/admin";
