--- a/src/styles/scss/components/_logInSignUp.scss
+++ b/src/styles/scss/components/_logInSignUp.scss
@@ -1,20 +1,41 @@
-
 .container__bgr {
-  background-image:url("");
+  &::before {
+    content: "";
+    position: absolute;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    background: $color-text-black;
+    opacity: 0.6;
+    width: 100%;
+    height: 100%;
+  }
+  background-image: url("../../../images/bgr.png");
   background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  filter: blur(1.5px);
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
+  z-index: 0;
 }
 
 .logIn,
 .signUp {
   max-width: 480px;
   margin: auto;
-  margin-top: 48px;
+  margin-top: 100px;
+  box-shadow: $shadow-1;
+  z-index: 2;
+  .signUp__form__btn,
+  .logIn__form__btn {
+    background-color: $color-secondary-dark !important;
+  }
   @media only screen and (max-width: 480px) {
     max-width: 400px;
+    margin-top: 180px;
   }
 }
