finished building log-in/sign-up components with common behaviors; expecting to develop user input validation for sign-up component; Added authentification barrier for admin interface

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -30,6 +30,7 @@
 @import "./scss/components/lessonListGroup";
 @import "./scss/components/lessonNavigation";
 @import "./scss/components/profileNav";
+@import "./scss/components/loading";
 
 /* ---------------- Admin ---------------- */
 @import "./scss/layouts/admin/admin";
