continued work with course slideshow & fixed category pages

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -31,6 +31,7 @@
 @import "./scss/components/lessonNavigation";
 @import "./scss/components/profileNav";
 @import "./scss/components/loading";
+@import "./scss/components/courseListSlideshow";
 
 /* ---------------- Admin ---------------- */
 @import "./scss/layouts/admin/admin";
