--- a/src/styles/scss/base/_reset.scss
+++ b/src/styles/scss/base/_reset.scss
@@ -1,4 +1,3 @@
-
 body,
 html {
   margin: 0 auto;
@@ -58,4 +57,7 @@ html {
   ol[class] {
     list-style: none;
   }
+}
+button.btn {
+  padding: $padding-05 $padding-1 !important;
 }
